Add jdk.internal.jline to list of whitelisted native modules Fix issues with native check running before module system is initialized